<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF0FC">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="413dp"
        android:layout_height="384dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="832dp"
            android:layout_height="328dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/top_background" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="70dp"
            android:text="@string/Hello"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.937"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profile" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/John_Watson"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/white_background"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:layout_constraintVertical_bias="0.67">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="65dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="130dp"
                    android:layout_marginTop="8dp"


                    app:srcCompat="@drawable/video_call" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="61dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="-55dp"
                    app:srcCompat="@drawable/notification" />

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginLeft="250dp"
                    android:layout_marginTop="-65dp"
                    app:srcCompat="@drawable/voice_call" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/messageID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="messages"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/onlineClass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="120dp"
                        android:layout_marginTop="-18dp"
                        android:text="Online Class"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/notifications"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="240dp"
                        android:layout_marginTop="-18dp"
                        android:text="Notifications"
                        android:textStyle="bold" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:srcCompat="@tools:sample/backgrounds/scenic" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="229dp"
            android:layout_height="53dp"
            android:layout_marginTop="56dp"
            android:background="@color/white"
            android:drawableStart="@drawable/search_icon"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/search"
            android:inputType="text"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.423"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="325dp"
            android:layout_height="131dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="224dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/banner_background" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
            app:layout_constraintStart_toStartOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView10"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="113dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:text="@string/Total_Classes"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
            app:layout_constraintEnd_toEndOf="@+id/imageView10"
            app:layout_constraintHorizontal_bias="0.844"
            app:layout_constraintStart_toStartOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView10"
            app:layout_constraintVertical_bias="0.283" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="60dp"
            android:text="@string/pay_value"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
            app:layout_constraintEnd_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.064" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="413dp"
            android:layout_height="62dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/navbar_background" />

        <ImageView
            android:id="@+id/studentList"
            android:layout_width="52dp"
            android:layout_height="51dp"
            android:layout_marginStart="36dp"
            app:layout_constraintStart_toStartOf="@+id/imageView19"
            app:layout_constraintTop_toTopOf="@+id/imageView19"
            app:srcCompat="@drawable/ic_5" />

        <ImageView
            android:id="@+id/featureList"
            android:layout_width="56dp"
            android:layout_height="43dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/studentList"
            app:layout_constraintTop_toTopOf="@+id/imageView19"
            app:srcCompat="@drawable/ic_2" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="45dp"
            android:layout_height="49dp"
            android:layout_marginStart="72dp"
            app:layout_constraintStart_toEndOf="@+id/featureList"
            app:layout_constraintTop_toTopOf="@+id/imageView19"
            app:srcCompat="@drawable/name" />

        <ImageView
            android:id="@+id/imageView14_0"
            android:layout_width="80dp"
            android:layout_height="78dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView10"
            app:srcCompat="@drawable/form_background" />

        <ImageView
            android:id="@+id/imageView14_1"
            android:layout_width="80dp"
            android:layout_height="78dp"
            android:layout_marginStart="164dp"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView10"
            app:srcCompat="@drawable/form_background" />

        <ImageView
            android:id="@+id/imageView14_2"
            android:layout_width="80dp"
            android:layout_height="78dp"
            android:layout_marginStart="284dp"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView10"
            app:srcCompat="@drawable/form_background" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="58dp"
            android:layout_height="61dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/imageView14_0"
            app:layout_constraintTop_toTopOf="@+id/imageView14_0"
            app:srcCompat="@drawable/email" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="55dp"
            android:layout_height="58dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/imageView14_1"
            app:layout_constraintTop_toTopOf="@+id/imageView14_1"
            app:srcCompat="@drawable/facebook" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="59dp"
            android:layout_height="59dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView14_2"
            app:layout_constraintEnd_toEndOf="@+id/imageView14_2"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="@+id/imageView14_2"
            app:layout_constraintTop_toTopOf="@+id/imageView14_2"
            app:srcCompat="@drawable/google" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>